-
Bug
-
Resolution: Fixed
-
Minor
-
Upstream
-
None
-
Tested on SLE15 + Lustre 2.11, and drivers/staging.
-
3
-
9223372036854775807
The command:
lctl --net tcp push
will cause a host with any active lustre connections to crash. Code in ksocknal_push() has an incorrect termination condition and falls off the end of a linked lists, dereferencing an invalid pointer.
Precise results vary. e.g. an LASSERT failure in ksocknal_connsock_addref(), or a NULL pointer dereference.